# personal-rag-platform

./: .gitignore  README.md  chat.html  pyproject.toml  requirements.txt  verify_startup.py
configs/: docker-compose.yaml
docs/: 0_架构设计.md  1_环境部署.md  2_问题排查.md  bge_m3_intro.txt  qdrant_intro.txt  rag-reranker-recipe.md  rag_intro.txt
src/: __init__.py  config.py  main.py  models.py  rag_chain.py  reranker.py
src/ingest/: __init__.py  __main__.py  chunker.py  cli.py  document_loader.py  embedder.py  qdrant_writer.py
src/utils/: __init__.py  logger_config.py  ollama_client.py
src/vectorstores/: __init__.py  qdrant_store.py
