# pyproject.toml — Personal RAG Platform 包管理与依赖定义
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-rag-platform"
version = "0.1.0"
description = "企业级私有化 RAG 知识库平台 — 存算分离 · FastAPI + LangChain + Qdrant + Ollama MoE"
authors = [{ name = "Okze", email = "3239685@qq.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "qdrant-client>=1.12.0",
    "ollama>=0.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
